# notclaude

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  version.yml
scripts/: commit-msg  install.sh
skills/notification-status/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/teardown/: SKILL.md
src/: config.rs  lib.rs  main.rs  notification.rs  permissions.rs  process.rs
