[package]
name = "notclaude"
version = "0.2.4"
edition = "2024"
description = "macOS desktop notifications for Claude Code hooks"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
plist = "1"
mac-notification-sys = "0.6"

[dev-dependencies]
tempfile = "3"
